[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "0.2.2"
clearscreen = "1.0.10"
reqwest = "0.11.12"
tokio = { version = "1.24.2", features = ["full"] }

[profile.release]
strip = true      # Strip symbols out of the binary.
opt-level = "z"   # Optimize for size.
lto = true        # Link Time Optimization
codegen-units = 4 # Use 4 threads to compile everything
